--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       type="image/x-icon"
     />
 
+    <script src="./scripts/books.js"></script>
     <script src="./script.js"></script>
     <script src="./scripts/templates.js"></script>
 
@@ -17,6 +18,7 @@
     <link rel="stylesheet" href="./styles/standard.css" />
     <link rel="stylesheet" href="./styles/header.css" />
     <link rel="stylesheet" href="./styles/book.css">
+    <link rel="stylesheet" href="./styles/assets.css">
   </head>
   <body onload="renderBooks()">
     <header>
