--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
       <div class="header_bg">
         <div class="header">
-          <img src="./assets/img/books-7479152_1280.png" alt="logo" />
+          <a href="./index.html"><img src="./assets/img/books-7479152_1280.png" alt="logo" /></a>
           <h1>Bookstore - get your books, love your books</h1>
         </div>
       </div>
